<resources>
    <string name="app_name">ExpenseX</string>
    <string name="expense_amount">Amount</string>
    <string name="expense_description">Item and Quantity</string>
    <string name="add_expense">Add Expense</string>
    <string name="income_amount">Income Amount</string>
    <string name="income_description">Name</string>
    <string name="add_income">Add Income</string>
    <string name="show_remaining_balance">Show Remaining Balance</string>
    <string name="remaining_balance">Remaining Balance:</string>
    <string name="budget_tracker">Budget Tracker</string>
    <string name="show_all_expenses">Show all Expenses</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="show_all_incomes">Show all Incomes</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>


    <string name="back4app_server_url">https://parseapi.back4app.com</string>
    <string name="back4app_app_id">1oTI4MSTplA8phElMIS7OZaEcZKAT3yashD1tQMB</string>
    <string name="back4app_client_key">zqd8svXAm6yCL9NNHoLQ1vOEBkrdpTCAlkQAmUNH</string>


    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="added_by">Added_by</string>
    <string name="background_image">background_image</string>
    <string name="empty_string" />

    <string name="new_user_sign_up">New user? Sign Up</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome,"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="shubhash_singh">Shubhash Singh</string>
    <string name="join_room">Join Room</string>
    <string name="create_room">Create Room</string>
    <string name="please_join_a_room">Please join a Room</string>
    <string name="room">Room</string>
    <string name="total_income">Total Income:</string>
    <string name="total_expenses">Total Expenses: </string>
    <string name="split_expense">Split Expense</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="settle">Settle</string>

    <string-array name="dropdown_items">
        <item>Option 1</item>
        <item>Option 2</item>
        <item>Option 3</item>
        <item>Option 4</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="data">Data</string>
    <string name="add_data">Add Data</string>
    <string name="chart">Chart</string>
    <string name="datesearchicon">DateSearchIcon</string>
</resources>