<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="20dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="4dp"
    android:layout_margin="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/cardview_background"
        android:orientation="vertical">
        <TextView
            android:id="@+id/amountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:padding="2dp"
            android:text="@string/amount"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/black"
            android:layout_marginStart="5dp"
            android:padding="2dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@color/black"
            android:layout_marginStart="5dp"
            android:padding="2dp"
            android:textSize="18sp" />

    </LinearLayout>
</androidx.cardview.widget.CardView>
