<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:drawablePadding="15dp"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:layout_marginVertical="25dp"
        android:textSize="25sp"
        app:drawableStartCompat="@drawable/ic_launcher_playstore" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="25dp"
        android:elevation="20dp"
        android:layout_marginHorizontal="15dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            android:background="@color/white">

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_input_background"
                android:autofillHints=""
                android:hint="@string/username"
                android:drawableStart="@drawable/custom_email_icon"
                android:drawablePadding="10dp"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:padding="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/black"
                android:textColorHint="#000000" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/password"
                android:drawableStart="@drawable/custom_lock_icon"
                android:background="@drawable/custom_input_background"
                android:drawablePadding="10dp"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="#000000" />


            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/login"
                android:textColor="@color/white"
                android:layout_marginTop="70dp"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_medium"
                android:textSize="20sp"
                android:background="@drawable/custom_input_background"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_user_sign_up"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="17sp"
                android:clickable="true"
                android:focusable="true"
                />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
