<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="20dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="4dp"
    android:layout_margin="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/cardview_background"
        android:orientation="horizontal"
        android:padding="10dp">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.8"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/descriptionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="@color/black"
                android:layout_marginStart="5dp"
                android:padding="2dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/dateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="@color/black"
                android:layout_marginStart="5dp"
                android:padding="2dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/added_by"
                android:textColor="@color/black"
                android:layout_marginStart="5dp"
                android:padding="2dp"
                android:textSize="18sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <Space
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="0.5"/>
            <TextView
                android:id="@+id/amountTextView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:padding="2dp"
                android:text="@string/amount"
                android:textColor="#FF0000"
                android:textSize="20sp" />
            <Space
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="0.5"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>