<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AddDataFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="3dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="20dp"
            app:cardCornerRadius="12dp"
            android:layout_margin="10dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp"
                android:background="@drawable/cardview_background_for_expense">

                <EditText
                    android:id="@+id/expenseAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/expense_amount"
                    android:inputType="numberDecimal"
                    android:background="@drawable/custom_input_background"
                    android:minHeight="48dp"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="#000000" />

                <EditText
                    android:id="@+id/expenseDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/expense_description"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/custom_input_background"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="#000000" />
                <Button
                    android:id="@+id/addExpenseButton"
                    android:layout_width="match_parent"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_height= "wrap_content"
                    android:text="@string/add_expense"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:padding="2dp"
                    android:layout_marginVertical="7dp"
                    android:layout_marginHorizontal="25dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>



        <!-- Income Section -->

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="20dp"
            app:cardCornerRadius="12dp"
            android:layout_marginVertical="25dp"
            android:layout_marginHorizontal="10dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp"
                android:background="@drawable/cardview_background_for_expense">

                <EditText
                    android:id="@+id/incomeAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/income_amount"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/custom_input_background"
                    android:inputType="numberDecimal"
                    android:minHeight="48dp"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="#000000"
                    tools:ignore="TextContrastCheck" />




                <Button
                    android:id="@+id/addIncomeButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="?android:attr/buttonBarButtonStyle"
                    android:text="@string/add_income"
                    android:padding="2dp"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_marginVertical="7dp"
                    android:layout_marginHorizontal="25dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="20dp"
            app:cardCornerRadius="12dp"
            android:layout_marginVertical="25dp"
            android:layout_marginHorizontal="10dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/cardview_background_for_expense">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingHorizontal="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="true"
                        android:paddingVertical="15dp"
                        android:text="@string/total_income"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:visibility="gone"/>
                    <TextView
                        android:id="@+id/incomeTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="true"
                        android:paddingVertical="15dp"
                        android:layout_marginHorizontal="5dp"
                        android:text="@string/empty_string"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:visibility="gone"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingHorizontal="15dp"
                    android:visibility="gone">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="true"
                        android:paddingVertical="15dp"
                        android:text="@string/total_expenses"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/expenseTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="true"
                        android:paddingVertical="15dp"
                        android:layout_marginHorizontal="5dp"
                        android:text="@string/empty_string"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingHorizontal="15dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="true"
                        android:paddingVertical="15dp"
                        android:text="@string/remaining_balance"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                         />

                    <TextView
                        android:id="@+id/balanceTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="true"
                        android:paddingVertical="15dp"
                        android:layout_marginHorizontal="5dp"
                        android:text="@string/empty_string"
                        android:textColor="#4CAF50"
                        android:textSize="18sp"/>
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>